--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "akundoproject",
+  "name": "akudoproject",
   "version": "1.0.0",
   "description": "A Covid vaccine checker scout program",
   "main": "index.js",
@@ -9,6 +9,13 @@
   "author": "Sai Rithvik Ayithapu",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "beepbeep": "^1.3.0",
+    "beeper": "^2.1.0",
+    "chalk": "^4.1.1",
+    "cli-table": "^0.3.6",
+    "express": "^4.17.1",
+    "inquirer": "^8.0.0",
+    "inquirer-search-list": "^1.2.6"
   }
 }
